fix login/register
