# app/Http/Controllers/ActivityController.php
@@ -10,14 +10,39 @@ use App\Models\Disctrict;
 
 class ActivityController extends Controller
 {
+          /**
+     * @OA\get(
+     *     path="/api/useractivity",
+     *     tags={"sitectivity"},
+     *     summary="API that request all data to show data in website",
+     *     description="it will get request all data to show data in website",
+     *     operationId="useractivity",
+     *     @OA\Response(
+     *         response="default",
+     *         description="make request data to model user"
+     *     )
+     * )
+     */
     public function datauser()
     {
-        $users = User::where('role', 'district_admin')->get();
+        $users = User::where('role', 'siteadmin')->get();
         return response()->json([
             'data' => $users
         ]);
     }
-
+         /**
+     * @OA\get(
+     *     path="/api/activitydata",
+     *     tags={"sitectivity"},
+     *     summary="API that request all data to show data in website",
+     *     description="it will get request all data to show data in website",
+     *     operationId="activitydata",
+     *     @OA\Response(
+     *         response="default",
+     *         description="make request data to model District"
+     *     )
+     * )
+     */
     public function activitydata()
     {
         $data = Activity::all();
@@ -25,7 +50,19 @@ class ActivityController extends Controller
             'data' => $data
         ]);
     }
-
+           /**
+     * @OA\get(
+     *     path="/api/hotnews",
+     *     tags={"siteactivty"},
+     *     summary="API that request all data to show data in website",
+     *     description="it will get request all data to show data in website",
+     *     operationId="hotnews",
+     *     @OA\Response(
+     *         response="default",
+     *         description="make request data to model siteactivty"
+     *     )
+     * )
+     */
     public function datahotnews()
     {
         $data = Hotnews::all();
@@ -33,7 +70,19 @@ class ActivityController extends Controller
             'data' => $data
         ]);
     }
-
+           /**
+     * @OA\Post(
+     *     path="/api/newactivity",
+     *     tags={"siteactivty"},
+     *     summary="API that create activity ",
+     *     description="it will send data to database",
+     *     operationId="newactivity",
+     *     @OA\Response(
+     *         response="default",
+     *         description="sen data to model siteactivty"
+     *     )
+     * )
+     */
     public function addactivity(Request $request)
     {
         
@@ -79,7 +128,19 @@ class ActivityController extends Controller
             'message' => 'activity Has Been added Succesfully',
         ], 201);
     }
-
+              /**
+     * @OA\Post(
+     *     path="/api/editactivity/{id}",
+     *     tags={"siteactivty"},
+     *     summary="API that edit activity data ",
+     *     description="it will edit data",
+     *     operationId="editactivity",
+     *     @OA\Response(
+     *         response="default",
+     *         description="it will request data to edit from model activity"
+     *     )
+     * )
+     */
     public function editactivity(Request $request, $id)
     {
         
@@ -125,7 +186,19 @@ class ActivityController extends Controller
             'message' => 'Activity Has Been updated Succesfully',
         ], 201);
     }
-
+               /**
+     * @OA\Post(
+     *     path="/api/deleteactivity/{id}",
+     *     tags={"siteactivty"},
+     *     summary="API that delete activity data ",
+     *     description="it will delete data",
+     *     operationId="deleteactivity",
+     *     @OA\Response(
+     *         response="default",
+     *         description="it will request data to delete data from model activity"
+     *     )
+     * )
+     */
     public function deleteactivity(Request $request, $id)
     {
         $activity = Activity::find($id);
@@ -134,7 +207,19 @@ class ActivityController extends Controller
             'message' => 'Activity has been deleted succesfully',
         ], 201);
     }
-
+            /**
+     * @OA\Post(
+     *     path="/api/newhotnews",
+     *     tags={"siteactivty"},
+     *     summary="API that create hotnews ",
+     *     description="it will send data to database",
+     *     operationId="newhotnews",
+     *     @OA\Response(
+     *         response="default",
+     *         description="send data to model siteactivty"
+     *     )
+     * )
+     */
     public function addhotnews(Request $request)
     {
         
@@ -176,7 +261,19 @@ class ActivityController extends Controller
             'message' => 'Hotnews Has Been added Succesfully',
         ], 201);
     }
-
+               /**
+     * @OA\Post(
+     *     path="/api/edithotnews/{id}",
+     *     tags={"siteactivty"},
+     *     summary="API that edit hotnews data ",
+     *     description="it will edit data",
+     *     operationId="edithotnews",
+     *     @OA\Response(
+     *         response="default",
+     *         description="it will request data to edit from model hotnews"
+     *     )
+     * )
+     */
     public function edithotnews(Request $request, $id)
     {
         
@@ -218,7 +315,19 @@ class ActivityController extends Controller
             'message' => 'Hotnews Has Been updated Succesfully',
         ], 201);
     }
-
+                  /**
+     * @OA\Post(
+     *     path="/api/deletehotnews/{id}",
+     *     tags={"siteactivty"},
+     *     summary="API that delete hotnews data ",
+     *     description="it will delete data",
+     *     operationId="deletehotnews",
+     *     @OA\Response(
+     *         response="default",
+     *         description="it will request data to delete data from model hotnews"
+     *     )
+     * )
+     */
     public function deletehotnews(Request $request, $id)
     {
         $activity = Hotnews::find($id);
